--- a/src/app/core/layout/footer/footer.component.html
+++ b/src/app/core/layout/footer/footer.component.html
@@ -2,9 +2,7 @@
   <div class="footer-content">
     <p>&copy; 2026 Melodica - Herramienta para composición musical</p>
     <nav>
-      <a href="/about">Sobre Mí</a> |
-      <a href="mailto:contacto@melodica.com">Contacto</a> |
-      <a href="/privacidad">Privacidad</a>
+      <a href="/terminos">Términos de Uso</a>
     </nav>
     <div class="pay">
       <a href="https://cafecito.app/nicobutter" rel="noopener" target="_blank" class="cafecito-btn">
