--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,7 +4,7 @@
 @use 'app/shared/styles/variables' as *;
 
 // Google Fonts Import
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&family=Dancing+Script:wght@400;700&family=Fira+Code:wght@300;400;500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&family=Dancing+Script:wght@400;700&family=Fira+Code:wght@300;400;500&family=Noto+Music&display=swap');
 
 // Global Modern Bohemian Styles
 * {
