fix: correct spelling of "Melódica" in multiple files

--- a/src/app/core/layout/header/header.component.html
+++ b/src/app/core/layout/header/header.component.html
@@ -4,7 +4,7 @@
       <!-- Logo/Brand -->
       <div class="brand">
         <a href="#hero" class="brand-link">
-          <span class="brand-text">Melodica</span>
+          <span class="brand-text">Melódica</span>
         </a>
       </div>
 
