fix: comment out unused Taller component references in landing component

--- a/src/app/features/landing/landing.component.html
+++ b/src/app/features/landing/landing.component.html
@@ -1,4 +1,4 @@
 <app-hero></app-hero>
 <app-herramientas></app-herramientas>
-<app-taller></app-taller>
+<!-- <app-taller></app-taller> -->
 <app-about></app-about>
